--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -56,12 +56,16 @@
     <script src="~/Assets/admin/libs/ckfinder/ckfinder.js"></script>
     <script src="~/Assets/admin/libs/ng-ckeditor/ng-ckeditor.js"></script>
     <script src="~/Assets/admin/libs/ngBootbox/ngBootbox.js"></script>
+    <script src="~/Assets/admin/libs/checklist-model/checklist-model.js"></script>
     <!--/lib-->
     <!--service-->
     <script src="~/app/shared/modules/grocery.common.js"></script>
     <script src="~/app/shared/filters/statusFilter.js"></script>
     <script src="~/app/shared/services/apiService.js"></script>
+    <!--directive-->
     <script src="~/app/shared/directives/pagerDiretive.js"></script>
+    <script src="~/app/shared/directives/asDataDirective.js"></script>
+    <!--directive-->
     <script src="~/app/shared/services/notificationService.js"></script>
     <script src="~/app/shared/services/commonService.js"></script>
     <script src="~/app/shared/services/authData.js"></script>
@@ -71,7 +75,9 @@
     <!--components-->
     <script src="~/app/components/products/products.module.js"></script>
     <script src="~/app/components/application_groups/applicationGroups.module.js"></script>
+    <script src="~/app/components/application_roles/applicationRoles.module.js"></script>
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
+    <script src="~/app/components/application_users/applicationUsers.module.js"></script>
     <script src="~/app/components/page/pages.module.js"></script>
     <script src="~/app/app.js"></script>
     <script src="~/app/components/home/rootController.js"></script>
@@ -88,11 +94,19 @@
     <script src="~/app/components/page/pagesAddController.js"></script>
     <script src="~/app/components/page/pagesEditController.js"></script>
 
+    <script src="~/app/components/home/homeController.js"></script>
+    <script src="~/app/components/login/loginController.js"></script>
+
     <script src="~/app/components/application_groups/applicationGroupAddController.js"></script>
     <script src="~/app/components/application_groups/applicationGroupEditController.js"></script>
     <script src="~/app/components/application_groups/applicationGroupListController.js"></script>
 
-    <script src="~/app/components/home/homeController.js"></script>
-    <script src="~/app/components/login/loginController.js"></script>
+    <script src="~/app/components/application_roles/applicationRoleAddController.js"></script>
+    <script src="~/app/components/application_roles/applicationRoleEditController.js"></script>
+    <script src="~/app/components/application_roles/applicationRoleListController.js"></script>
+
+    <script src="~/app/components/application_users/applicationUserAddController.js"></script>
+    <script src="~/app/components/application_users/applicationUserEditController.js"></script>
+    <script src="~/app/components/application_users/applicationUserListController.js"></script>
 </body>
 </html>
