--- a/WebAPI.Web/app/components/application_roles/applicationRoleListView.html
+++ b/WebAPI.Web/app/components/application_roles/applicationRoleListView.html
@@ -3,12 +3,13 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Danh sách nhóm</h1>
+                <h1> Danh sách quyền</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Home ></a></li>
-                    <li class="breadcrumb-item active">Danh sách nhóm</li>
+                    <li class="breadcrumb-item"><a href="/admin">Trang chủ ></a></li>
+                    <li><a href="#">Nhóm quyền ></a></li>
+                    <li class="active">Danh mục quyền</li>
                 </ol>
             </div>
         </div>
@@ -22,21 +23,21 @@
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">Danh sách nhóm</h3>
+                <h3 class="card-title">Danh sách quyền</h3>
             </div>
 
             <div class="row">
                 <div class="col-md-6">
                     <div class="input-group" style=" padding:15px">
-                        <input type="text" class="form-control" ng-model="filterExpression" placeholder="Search for...">
+                        <input type="text" ng-model="keyword" class="form-control" placeholder="Nhập từ khóa...">
                         <span class="input-group-btn">
-                            <button class="btn btn-default" type="button" ng-click="search()">Search</button>
+                            <button class="btn btn-default" type="button" ng-click="search()">Tìm kiếm</button>
                         </span>
                     </div><!-- /input-group -->
                 </div>
                 <div class="col-md-6 right">
                     <div class="input-group" style=" padding:15px">
-                        <button class="btn btn-success" type="button" ui-sref="add_application_group">Thêm mới</button>
+                        <button class="btn btn-success" type="button" ui-sref="add_application_role">Thêm mới</button>
                         <button class="btn btn-danger" type="button" ng-click="deleteMultiple()" id="btnDelete" disabled> Xoá</button>
                     </div>
                 </div>
@@ -47,27 +48,25 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <td>
+                            <td style="width: 5%">
                                 <input name="all" type="checkbox" ng-click="selectAll()" />
                             </td>
-                            <th style="width: 15%">ID</th>
-                            <th style="width: 50%">Tên nhóm</th>
-                            <th style="width: 20%">Mô tả</th>
+                            <th style="width: 25%">Tên người dùng</th>
+                            <th style="width: 50%">Tên quyền</th>
+
                             <th style="width: 15%">Thao Tác</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr ng-repeat="item in data">
                             <td><input type="checkbox" ng-model="item.checked" name="all" /></td>
-                            <td>{{item.ID}}</td>
-                            <td><a ui-sref="edit_application_group({id:item.ID})">{{item.Name}}</a></td>
+                            <td><a ui-sref="edit_application_role({id:item.Id})">{{item.Name}}</a></td>
                             <td>
                                 {{item.Description}}
                             </td>
-
                             <td>
-                                <button class="btn btn-primary" ui-sref="edit_application_group({id:item.ID})"><i class="fa fa-pencil-alt"></i></button>
-                                <button class="btn btn-danger" ng-click="deleteItem(item.ID)"><i class="fa fa-trash"></i></button>
+                                <button class="btn btn-primary" ui-sref="edit_application_role({id:item.Id})"><i class="fa fa-pencil-alt"></i></button>
+                                <button class="btn btn-danger" ng-click="deleteItem(item.Id)"><i class="fa fa-trash"></i></button>
                             </td>
                         </tr>
                     </tbody>
@@ -76,14 +75,7 @@
             <!-- /.card-body -->
             <div class="card-footer clearfix">
 
-                <pager-directive page="{{page}}" custom-path="{{customPath}}" pages-count="{{pagesCount}}" total-count="{{totalCount}}" search-func="search(page)"> </pager-directive>
-                <!--<ul class="pagination pagination-sm m-0 float-right">
-                    <li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
-                </ul>-->
+                <pager-directive page="{{page}}" custom-path="{{customPath}}" pages-count="{{pagesCount}}" total-count="{{totalCount}}" search-func="search(page)"></pager-directive>
             </div>
         </div>
     </div>
