--- a/WebAPI.Web/app/shared/views/baseView.html
+++ b/WebAPI.Web/app/shared/views/baseView.html
@@ -172,6 +172,13 @@
                                     <p>danh mục sản phẩm</p>
                                 </a>
                             </li>
+
+                            <li class="nav-item">
+                                <a ui-sref="application_groups" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>danh mục sản phẩm</p>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item has-treeview">
@@ -220,13 +227,13 @@
                             </li>
 
                             <li class="nav-item">
-                                <a ui-sref="product_categories" class="nav-link">
+                                <a ui-sref="application_roles" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Quyền</p>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a ui-sref="product_categories" class="nav-link">
+                                <a ui-sref="application_users" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Người dùng</p>
                                 </a>
