--- a/WebAPI.Web/app/shared/views/baseView.html
+++ b/WebAPI.Web/app/shared/views/baseView.html
@@ -141,7 +141,7 @@
                     <img src="/Assets/admin/img/quochiep.jpg" class="img-circle elevation-2" alt="User Image">
                 </div>
                 <div class="info">
-                    <a href="javascript:void(0);" class="d-block">Nguyễn Quốc Hiệp</a>
+                    <a href="javascript:void(0);" class="d-block">{{authentication.userName}}</a>
                 </div>
             </div>
 
