--- a/WebAPI.Web/app/components/product_categories/ProductCategoryAddView.html
+++ b/WebAPI.Web/app/components/product_categories/ProductCategoryAddView.html
@@ -53,7 +53,7 @@
             <div class="form-group row">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Danh Mục Cha</label>
                 <div class="col-sm-10">
-                    <select class="form-control" name="parentId" ng-model="productCategory.ParentID" ng-options="option.ID as option.Name for option in parentCategories">
+                    <select class="form-control" name="parentId" ng-model="productCategory.ParentID" ng-options="option.ID as option.Name for option in flatFolders">
                         Danh mục cha
                         <option value="">-- chọn danh mục cha --</option>
                     </select>
