--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -27,8 +27,6 @@
     <link href="~/Assets/admin/libs/angular-loading-bar/build/loading-bar.css" rel="stylesheet" />
     <link href="~/Assets/admin/css/custom.css" rel="stylesheet" />
     <!--/toastr-->
-   
-  
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -73,6 +71,9 @@
     <!--directive-->
     <script src="~/app/shared/directives/pagerDiretive.js"></script>
     <script src="~/app/shared/directives/asDataDirective.js"></script>
+
+    <script src="~/app/shared/directives/fileUpload.directive.js"></script>
+
     <!--directive-->
     <script src="~/app/shared/services/notificationService.js"></script>
     <script src="~/app/shared/services/commonService.js"></script>
@@ -94,6 +95,7 @@
     <script src="~/app/components/products/productAddController.js"></script>
     <script src="~/app/components/products/productEditController.js"></script>
     <script src="~/app/components/products/productListController.js"></script>
+    <script src="~/app/components/products/productImportController.js"></script>
 
     <script src="~/app/components/product_categories/producteCategoryListController.js"></script>
     <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
