--- a/WebAPI.Web/Views/Product/Category.cshtml
+++ b/WebAPI.Web/Views/Product/Category.cshtml
@@ -1,9 +1,9 @@
 ﻿@model WebAPI.Web.Infrastructure.Core.PaginationSet<WebAPI.Web.Models.ProductViewModel>
 
 @{
-    var category = (WebAPI.Web.Models.ProductCategoryViewModel)ViewBag.Category;
+   // var category = (WebAPI.Web.Models.ProductCategoryViewModel)ViewBag.Category;
 
-    ViewBag.Title = category.Name;
+    ViewBag.Title = "";
     //ViewBag.MetaDescription = category.MetaDescription;
     //ViewBag.MetaKeyword = category.MetaKeyword;
     Layout = "~/Views/Shared/Layouts.cshtml";
