--- a/WebAPI.Web/app/components/application_users/applicationUserListView.html
+++ b/WebAPI.Web/app/components/application_users/applicationUserListView.html
@@ -61,7 +61,7 @@
 
                             <td>
                                 <button class="btn btn-primary" ui-sref="edit_application_user({id:item.Id})"><i class="fa fa-pencil-alt"></i></button>
-                                <button class="btn btn-danger" ng-click="deleteItem(item.ID)"><i class="fa fa-trash"></i></button>
+                                <button class="btn btn-danger" ng-click="deleteItem(item.Id)"><i class="fa fa-trash"></i></button>
                             </td>
                         </tr>
                     </tbody>
