--- a/WebAPI.Web/app/components/products/productListView.html
+++ b/WebAPI.Web/app/components/products/productListView.html
@@ -35,6 +35,8 @@
                 </div>
                 <div class="col-md-6 right">
                     <div class="input-group" style=" padding:15px">
+                        <a class="btn btn-warning" href="/Assets/admin/template/productinport.xlsx">Download template</a>
+                        <button class="btn btn-primary" type="button" ui-sref="product_import">Nhập</button>
                         <button class="btn btn-success" type="button" ui-sref="product_add">Thêm mới</button>
                         <button class="btn btn-danger" type="button" ng-click="deleteMultiple()" id="btnDelete" disabled> Xoá</button>
                     </div>
