--- a/WebAPI.Web/app/components/products/productEditView.html
+++ b/WebAPI.Web/app/components/products/productEditView.html
@@ -28,11 +28,11 @@
     <form class="form-horizontal" novalidate name="frmUpdateProduct" role="form" ng-submit="UpdateProduct()">
         <div class="card-body">
             <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">Tên Danh Mục</label>
+                <label for="inputEmail3" class="col-sm-2 col-form-label">Tên Sản phẩm</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" ng-maxlength="256" ng-change="GetSeoTitle()" required name="name" ng-model="product.Name">
-                    <span ng-show="frmUpdateProduct.name.$invalid" class="has-error">Phải nhập tên danh mục.</span>
-                    <span ng-show="frmUpdateProduct.name.$error.maxlength" class="has-error">Tên danh mục vượt quá 256 kí tự</span>
+                    <span ng-show="frmUpdateProduct.name.$invalid" class="has-error">Phải nhập tên Sản phẩm.</span>
+                    <span ng-show="frmUpdateProduct.name.$error.maxlength" class="has-error">Tên Sản phẩm vượt quá 256 kí tự</span>
                 </div>
             </div>
             <div class="form-group row">
@@ -173,7 +173,7 @@
         <!-- /.card-body -->
         <div class="card-footer">
             <button type="submit" ng-disabled="frmUpdateProduct.$invalid" class="btn btn-info">Lưu</button>
-            <button ui-sref="product_categories" class="btn btn-default float-right">quay lại</button>
+            <button ui-sref="products" class="btn btn-default float-right">quay lại</button>
         </div>
         <!-- /.card-footer -->
     </form>
