add func feedback, footer

--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -89,6 +89,8 @@
     <script src="~/app/components/application_users/applicationUsers.module.js"></script>
     <script src="~/app/components/page/pages.module.js"></script>
     <script src="~/app/components/statistic/statistic.module.js"></script>
+    <script src="~/app/components/feedback/feedbacks.module.js"></script>
+    <script src="~/app/components/footer/footers.module.js"></script>
     <script src="~/app/app.js"></script>
     <script src="~/app/components/home/rootController.js"></script>
 
@@ -119,6 +121,14 @@
     <script src="~/app/components/application_users/applicationUserAddController.js"></script>
     <script src="~/app/components/application_users/applicationUserEditController.js"></script>
     <script src="~/app/components/application_users/applicationUserListController.js"></script>
+
+    <script src="~/app/components/feedback/feedbacksAddController.js"></script>
+    <script src="~/app/components/feedback/feedbacksEditController.js"></script>
+    <script src="~/app/components/feedback/feedbacksListController.js"></script>
+
+    <script src="~/app/components/footer/footersAddController.js"></script>
+    <script src="~/app/components/footer/footersEditController.js"></script>
+    <script src="~/app/components/footer/footersListController.js"></script>
 
     <script src="~/app/components/statistic/revenueStatisticController.js"></script>
 </body>
