--- a/WebAPI.Web/app/shared/views/baseView.html
+++ b/WebAPI.Web/app/shared/views/baseView.html
@@ -190,15 +190,15 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="../tables/data.html" class="nav-link">
+                                <a ui-sref="feedbacks" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>Footer</p>
+                                    <p>Phản hồi</p>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="../tables/jsgrid.html" class="nav-link">
+                                <a ui-sref="footers" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>jsGrid</p>
+                                    <p>Chân trang</p>
                                 </a>
                             </li>
                         </ul>
