--- a/WebAPI.Web/Views/Shared/Header.cshtml
+++ b/WebAPI.Web/Views/Shared/Header.cshtml
@@ -291,7 +291,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="#">LIÊN HỆ VỚI CHÚNG TÔI</a></li>
+                                <li><a href="/lien-he.html">LIÊN HỆ VỚI CHÚNG TÔI</a></li>
                             </ul>
                         </nav>
                     </div>
