--- a/WebAPI.Web/app/shared/views/baseView.html
+++ b/WebAPI.Web/app/shared/views/baseView.html
@@ -201,6 +201,18 @@
                                     <p>Chân trang</p>
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a ui-sref="slides" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Slide</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a ui-sref="orders" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Đơn đặt hàng</p>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item has-treeview">
