--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -90,6 +90,8 @@
     <script src="~/app/components/page/pages.module.js"></script>
     <script src="~/app/components/statistic/statistic.module.js"></script>
     <script src="~/app/components/feedback/feedbacks.module.js"></script>
+    <script src="~/app/components/order/orders.module.js"></script>
+    <script src="~/app/components/slide/slides.module.js"></script>
     <script src="~/app/components/footer/footers.module.js"></script>
     <script src="~/app/app.js"></script>
     <script src="~/app/components/home/rootController.js"></script>
@@ -129,6 +131,14 @@
     <script src="~/app/components/footer/footersAddController.js"></script>
     <script src="~/app/components/footer/footersEditController.js"></script>
     <script src="~/app/components/footer/footersListController.js"></script>
+
+    <script src="~/app/components/slide/slidesAddController.js"></script>
+    <script src="~/app/components/slide/slidesEditController.js"></script>
+    <script src="~/app/components/slide/slidesListController.js"></script>
+
+    <script src="~/app/components/order/ordersAddController.js"></script>
+    <script src="~/app/components/order/ordersEditController.js"></script>
+    <script src="~/app/components/order/ordersListController.js"></script>
 
     <script src="~/app/components/statistic/revenueStatisticController.js"></script>
 </body>
