thêm menu cho admin

--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -91,6 +91,7 @@
     <script src="~/app/components/statistic/statistic.module.js"></script>
     <script src="~/app/components/feedback/feedbacks.module.js"></script>
     <script src="~/app/components/order/orders.module.js"></script>
+    <script src="~/app/components/menu/menus.module.js"></script>
     <script src="~/app/components/slide/slides.module.js"></script>
     <script src="~/app/components/footer/footers.module.js"></script>
     <script src="~/app/app.js"></script>
@@ -139,6 +140,10 @@
     <script src="~/app/components/order/ordersAddController.js"></script>
     <script src="~/app/components/order/ordersEditController.js"></script>
     <script src="~/app/components/order/ordersListController.js"></script>
+
+    <script src="~/app/components/menu/menusAddController.js"></script>
+    <script src="~/app/components/menu/menusEditController.js"></script>
+    <script src="~/app/components/menu/menusListController.js"></script>
 
     <script src="~/app/components/statistic/revenueStatisticController.js"></script>
 </body>
