--- a/WebAPI.Web/app/shared/views/baseView.html
+++ b/WebAPI.Web/app/shared/views/baseView.html
@@ -213,6 +213,12 @@
                                     <p>Đơn đặt hàng</p>
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a ui-sref="menus" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Tinh chỉnh Menu</p>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item has-treeview">
