--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -92,6 +92,7 @@
     <script src="~/app/components/feedback/feedbacks.module.js"></script>
     <script src="~/app/components/order/orders.module.js"></script>
     <script src="~/app/components/menu/menus.module.js"></script>
+    <script src="~/app/components/menugroup/menugroups.module.js"></script>
     <script src="~/app/components/slide/slides.module.js"></script>
     <script src="~/app/components/footer/footers.module.js"></script>
     <script src="~/app/app.js"></script>
@@ -144,6 +145,10 @@
     <script src="~/app/components/menu/menusAddController.js"></script>
     <script src="~/app/components/menu/menusEditController.js"></script>
     <script src="~/app/components/menu/menusListController.js"></script>
+
+    <script src="~/app/components/menugroup/menugroupsAddController.js"></script>
+    <script src="~/app/components/menugroup/menugroupsEditController.js"></script>
+    <script src="~/app/components/menugroup/menugroupsListController.js"></script>
 
     <script src="~/app/components/statistic/revenueStatisticController.js"></script>
 </body>
