--- a/WebAPI.Web/app/shared/views/baseView.html
+++ b/WebAPI.Web/app/shared/views/baseView.html
@@ -207,10 +207,21 @@
                                     <p>Slide</p>
                                 </a>
                             </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item has-treeview">
+                        <a href="javascript:void(0);" class="nav-link">
+                            <i class="nav-icon fas fa-chart-area"></i>
+                            <p>
+                                Menu
+                                <i class="right fas fa-angle-left"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a ui-sref="orders" class="nav-link">
+                                <a ui-sref="menugroups" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>Đơn đặt hàng</p>
+                                    <p>Nhóm Menu</p>
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -264,6 +275,12 @@
                                 <a ui-sref="statistic_revenue" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Thống kê doanh số</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a ui-sref="orders" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Đơn đặt hàng</p>
                                 </a>
                             </li>
                         </ul>
