add menu group api

--- a/WebAPI.Web/Views/Shared/Header.cshtml
+++ b/WebAPI.Web/Views/Shared/Header.cshtml
@@ -38,6 +38,7 @@
 
                                 <li><a href="wishlist.html" title="wishlist">My wishlist</a></li>
                                 <li><a href="/tai-khoan.html" title="My account">Xin Chào: @User.Identity.GetUserName()</a></li>
+                                <li><a href="/thay-doi-mat-khau.html" title="Thay đổi mật khẩu">Thay đổi mật khẩu</a></li>
                                 <li><a href="#" id="btnLogout">Đăng Xuất</a></li>
                             }
 
