--- a/WebAPI.Web/Views/Account/Login.cshtml
+++ b/WebAPI.Web/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
         <div class="col-12">
             <div class="breadcrumb_content">
                 <ul>
-                    <li><a href="index.html">home</a></li>
+                    <li><a href="/">home</a></li>
                     <li><i class="fa fa-angle-right"></i></li>
                     <li>Đăng nhập</li>
                 </ul>
